--- a/public/css/sass_partials/_feed.scss
+++ b/public/css/sass_partials/_feed.scss
@@ -4,7 +4,16 @@
 
   .post_background {
     width: 50%;
+    height: 80%;
     margin: auto;
     background: rgba(89,172,139,0.7);
+
+    #postTextArea {
+      color: white;
+      font-size: 3em;
+      margin-top: 1ex;
+      max-height: 150px;
+      line-height: 1;
+    }
   }
 }
