--- a/public/css/sass_partials/_globals.scss
+++ b/public/css/sass_partials/_globals.scss
@@ -1,4 +1,13 @@
 body {
   padding-top: 45px;
   background: #ECECEC;
+
+  .md-input-focused {
+    input, textarea {
+      border-color: white!important;
+    }
+  }
+  .pink_btn {
+    background-color: #E37695!important;
+  }
 }
