--- a/public/css/sass_partials/_globals.scss
+++ b/public/css/sass_partials/_globals.scss
@@ -2,12 +2,18 @@ body {
   padding-top: 45px;
   background: #ECECEC;
 
-  .md-input-focused {
-    input, textarea {
-      border-color: white!important;
-    }
+  ul li {
+    list-style-type: none;
   }
-  .pink_btn {
-    background-color: #E37695!important;
+  #ui_view_div {
+    background: #ECECEC;
+    .md-input-focused {
+      input, textarea {
+        border-color: white!important;
+      }
+    }
+    .pink_btn {
+      background-color: #E37695!important;
+    }
   }
 }
