calling it a night after trying libraries for sticky header to no avail

--- a/public/css/sass_partials/_globals.scss
+++ b/public/css/sass_partials/_globals.scss
@@ -16,4 +16,12 @@ body {
       background-color: #E37695!important;
     }
   }
+  md-content {
+    background: inherit;
+  }
+  #nav.affix {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
 }
