set up s3 saving and upload model creation and attaching to posts

--- a/public/css/sass_partials/_globals.scss
+++ b/public/css/sass_partials/_globals.scss
@@ -9,6 +9,10 @@ body {
     background: #ECECEC;
     .pink_btn {
       background-color: #E37695!important;
+
+      &:hover {
+        background: #E2507A!important;
+      }
     }
   }
   md-content {
