--- a/public/css/sass_partials/_feed.scss
+++ b/public/css/sass_partials/_feed.scss
@@ -1,6 +1,6 @@
 .jumbotron {
   background-image: url("../img/yellow-polka-dot-background.jpg");
-  height: 350px;
+  height: auto;
   margin-bottom: 0;
 
   .post_background {
@@ -12,6 +12,7 @@
     position: relative;
 
     #postInput {
+      overflow: hidden;
       label {
         font-size: 29px;
         color: #ECECEC;
@@ -23,10 +24,21 @@
       color: white;
       font-size: 3em;
       margin-top: 2ex;
+      margin-bottom: 50px;
       height: 100px;
+      width: 103%;
       overflow: scroll;
+      overflow-x: hidden;
       line-height: 1;
       border-color: rgba(0,0,0,0);
+    }
+
+    #imagePreviewRow {
+      margin-bottom: 240px;
+      .imagePreview {
+        height: 125px;
+        float: left;
+      }
     }
     #post_button_container {
       position: absolute;
@@ -58,9 +70,13 @@
       &:hover {
         background-color: rgba(0,0,0,0.1);
       }
+      &:focus {
+        outline: 0!important;
+      }
     }
     #postBtn {
       background-color: rgba(0,0,0,0);
+      cursor: default;
     }
   }
 }
@@ -76,6 +92,9 @@
     &:hover {
       background-color: rgba(0,0,0,0.05);
       border-bottom: 5px solid #FFF37B;
+    }
+    &:focus {
+      outline: 0!important;
     }
   }
 
